--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@ button:hover {
         <p>Have questions? Reach out to us!</p>
 
         <div class="contact-info">
-            <p><strong>Phone:</strong> +63 912 345 6789</p>
+            <p><strong>Phone:</strong> 09977228898</p>
             <p><strong>Email:</strong> ashleys.pinoyresto@email.com</p>
             <p><strong>Address:</strong> 123 Makati Ave, Makati City, Philippines</p>
         </div>
